[package]
name = "lavan"
version = "0.0.4-rc-unstable"
authors = ["Sabi <sabitheotome@tutanota.de>"]
description = "Lavan is a parser library"
license = "GPL-3.0"
repository = "https://github.com/sabitheotome/lavan"
edition = "2021"

[dependencies]
stability = "0.2.1"
lavan-proc-macros = { path = "./macros" }
either = { version = "1.9.0", optional = true }

[dev-dependencies]

[features]
default = ["either"]
either = ["dep:either"]

# unstable
# experimental = []
# experimental_api_2021 = ["experimental", "experimental_prelude_2021_v1", "experimental_parser_api_2021_v1"]
# experimental_prelude_2021_v1 = ["experimental"]
# experimental_parser_api_2021_v1 = ["experimental"]

# experimental
unstable = []
unstable-api-2021 = ["unstable", "unstable-prelude-2021-v1", "unstable-text-util-2021-v1", "unstable-repeat-api-2021-v1", "unstable-name-tbd"]
unstable-prelude-2021-v1 = ["unstable"]
unstable-text-util-2021-v1 = ["unstable"]
unstable-repeat-api-2021-v1 = ["unstable"]
unstable-name-tbd = ["unstable"]

# unsafe
unsafe_parser_gen_macro_v1 = []
unsafe_parser_gen_macro_cache_v1 = []

[profile.dev]
opt-level = 2

[workspace]
members = ["macros"]
